--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,3 +11,58 @@ a
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
 }
+input 
+{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid black
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+}
+  
+input[type=submit] 
+{
+    background-color: #4CAF50;
+    color: white;
+}
+#message 
+{
+    display:none;
+    background: #f1f1f1;
+    color: #000;
+    position: relative;
+    padding: 20px;
+    margin-top: 10px;
+}
+  
+#message p 
+{
+    padding: 10px 35px;
+    font-size: 13px;
+}
+  
+.valid 
+{
+    color: green;
+}
+  
+.valid:before 
+{
+    position: relative;
+    left: -35px;
+    content: "✔";
+}
+  
+.invalid 
+{
+    color: red;
+}
+  
+.invalid:before 
+{
+    position: relative;
+    left: -35px;
+    content: "✖";
+}
