--- a/views/addData.ejs
+++ b/views/addData.ejs
@@ -21,23 +21,23 @@
             </div>
             <div class="form-group">
                 <label for="Title">Title</label>
-                <input class="form-control" type="text" placeholder="Name" name="title">
+                <input class="form-control" type="text" placeholder="Name" name="title" required>
             </div>
             <div class="form-group">
                 <label for="Author">Author</label>
-                <input class="form-control" type="text" placeholder="Author" name="author">
+                <input class="form-control" type="text" placeholder="Author" name="author" required>
             </div>
             <div class="form-group">
                 <label for="Genre">Genre</label>
-                <input class="form-control" type="text" placeholder="Genre" name="genre">
+                <input class="form-control" type="text" placeholder="Genre" name="genre" required>
             </div>
             <div class="form-group">
                 <label for="Publication">Publication</label>
-                <input class="form-control" type="text" placeholder="Publication" name="publication">
+                <input class="form-control" type="text" placeholder="Publication" name="publication" required>
             </div>
             <div class="form-group">
                 <label for="Price">Price</label>
-                <input class="form-control" type="text" placeholder="Price" name="price">
+                <input class="form-control" type="text" placeholder="Price" name="price" required>
             </div>
             <div class="form-group">
                 <button type="submit" class="form-control btn btn-success">Add Book</button>
