--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,11 +21,11 @@
         </div>
         <div class="form-group">
             <label for="Email">Email</label>
-            <input class="form-control" type="email" placeholder="Email" name="email">
+            <input class="form-control" type="email" placeholder="Email" name="email" required>
         </div>
         <div class="form-group">
             <label for="Password">Password</label>
-            <input class="form-control" type="password" placeholder="Password" name="password">
+            <input class="form-control" type="password" placeholder="Password" name="password" required>
         </div>
         <div class="form-group">
             <button type="submit" class="form-control btn btn-success">Login</button>
