--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,15 +21,22 @@
             </div>
             <div class="form-group">
                 <label for="Username">Username</label>
-                <input class="form-control" type="text" placeholder="Username" name="username">
+                <input class="form-control" type="text" placeholder="Username" name="username" required>
             </div>
             <div class="form-group">
                 <label for="Email">Email</label>
-                <input class="form-control" type="email" placeholder="Email" name="email">
+                <input class="form-control" type="email" placeholder="Email" name="email" required>
             </div>
             <div class="form-group">
                 <label for="Password">Password</label>
-                <input class="form-control" type="password" placeholder="Password" name="password">
+                <input class="form-control" type="password" placeholder="Password" id="psw" name="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                <div id="message">
+                    <h5>Password must contain the following:</h5>
+                    <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+                    <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+                    <p id="number" class="invalid">A <b>number</b></p>
+                    <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+                  </div>
             </div>
             <div class="form-group">
                 <button type="submit" class="form-control btn btn-success">Register</button>
@@ -41,5 +48,68 @@
         </div>
         </div>
 </div>
+<script>
+    var myInput = document.getElementById("psw");
+    var letter = document.getElementById("letter");
+    var capital = document.getElementById("capital");
+    var number = document.getElementById("number");
+    var length = document.getElementById("length");
+    
+    myInput.onfocus = function() 
+    {
+      document.getElementById("message").style.display = "block";
+    }
+    
+    myInput.onblur = function() 
+    {
+      document.getElementById("message").style.display = "none";
+    }
+    myInput.onkeyup = function() 
+    {
+      var lowerCaseLetters = /[a-z]/g;
+      if(myInput.value.match(lowerCaseLetters)) 
+      {  
+        letter.classList.remove("invalid");
+        letter.classList.add("valid");
+      } 
+      else 
+      {
+        letter.classList.remove("valid");
+        letter.classList.add("invalid");
+      }
+      var upperCaseLetters = /[A-Z]/g;
+      if(myInput.value.match(upperCaseLetters)) 
+      {  
+        capital.classList.remove("invalid");
+        capital.classList.add("valid");
+      } 
+      else 
+      {
+        capital.classList.remove("valid");
+        capital.classList.add("invalid");
+      }
+      var numbers = /[0-9]/g;
+      if(myInput.value.match(numbers)) 
+      {  
+        number.classList.remove("invalid");
+        number.classList.add("valid");
+      } 
+      else 
+      {
+        number.classList.remove("valid");
+        number.classList.add("invalid");
+      }
+      if(myInput.value.length >= 8) 
+      {
+        length.classList.remove("invalid");
+        length.classList.add("valid");
+      } 
+      else 
+      {
+        length.classList.remove("valid");
+        length.classList.add("invalid");
+      }
+    }
+    </script>
 </body>
 </html>
